--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,6 +48,7 @@ book:
     - contents/2/intro.qmd
     - contents/3/intro.qmd
     - contents/4/intro.qmd
+    - contents/intro2pt/intro.qmd
     - contents/5/intro.qmd
     - contents/6/intro.qmd
   #   - part: "Part II: R"
