--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,7 +50,7 @@ book:
     - contents/4/intro.qmd
     - contents/5/intro.qmd
     - contents/6/intro.qmd
-    # - contents/7/intro.qmd
+    - contents/7/intro.qmd
   #   - part: "Part II: R"
   #     chapters:
   #       - contents/7/07-.qmd
